# OpusFeed

./: .gitignore  Makefile  README.md
references/: rss-0.2specs.html
src/: ByteArray.cpp  ByteArray.h  CMakeLists.txt  ConsoleColor.cpp  ConsoleColor.h  Downloader.cpp  Downloader.h  Feed.cpp  Feed.h  FileUtil.cpp  FileUtil.h  Log.cpp  Log.h  OptionsManager.h  OpusConverter.cpp  OpusConverter.h  OpusFeed.cpp  RFC822Time.cpp  RFC822Time.h  Regex.cpp  Regex.h  SmartPtr.h  SqliteDB.cpp  SqliteDB.h  SqliteStatement.cpp  SqliteStatement.h  StrUtil.cpp  StrUtil.h  Tree.cpp  Tree.h  Variant.h  Version.h  WinResources.rc
